--- a/frontend/web/css/carpost.css
+++ b/frontend/web/css/carpost.css
@@ -25,12 +25,17 @@
 
 .carpost-data{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     width:300px;
     font-size:16px;
     font-weight: 100;
     color:#b7b7b7;
+}
+.convertion{
+    font-size:16px;
+    font-weight: bold;
+    margin:0;
 }
 .carpost-data h6{
     margin:0;
